@@ -11,6 +11,7 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.oauth2.client.endpoint.DefaultAuthorizationCodeTokenResponseClient;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
@@ -27,14 +28,20 @@ public class SecurityConfig {
     private final JWTUtil jwtUtil;
     private final RedisTokenRepository redisTokenRepository;
     private final UserService userService;
+    private final CustomAuthenticationEntryPoint authenticationEntryPoint;
+    private final CustomAccessDeniedHandler accessDeniedHandler;
     public SecurityConfig(CustomOAuth2UserService customOAuth2UserService, CustomSuccessHandler customSuccessHandler, JWTUtil jwtUtil,
-    RedisTokenRepository redisTokenRepository,UserService userService) {
+    RedisTokenRepository redisTokenRepository,UserService userService,CustomAuthenticationEntryPoint authenticationEntryPoint, CustomAccessDeniedHandler accessDeniedHandler
+    ) {
 
         this.customOAuth2UserService = customOAuth2UserService;
         this.customSuccessHandler = customSuccessHandler;
         this.jwtUtil = jwtUtil;
         this.redisTokenRepository = redisTokenRepository;
         this.userService = userService;
+        this.authenticationEntryPoint = authenticationEntryPoint;
+        this.accessDeniedHandler = accessDeniedHandler;
+
     }
 
     @Bean
@@ -47,21 +54,26 @@ public class SecurityConfig {
                 .httpBasic((auth) -> auth.disable());
 
         http
-            .cors(corsCustomizer -> corsCustomizer.configurationSource(new CorsConfigurationSource() {
-                @Override
-                public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-                    CorsConfiguration config = new CorsConfiguration();
-                    config.setAllowedOrigins(List.of("https://where-are-you-going-daeng-daeng-fe.vercel.app","http://localhost:5173"));
-                    config.setAllowedMethods(Collections.singletonList("*"));
-                    config.setAllowCredentials(true);
-                    config.setAllowedHeaders(Collections.singletonList("*"));
-                    config.setMaxAge(3600L);
-                    return config;
-                }
-            }));
-
+                .cors(corsCustomizer -> corsCustomizer.configurationSource(new CorsConfigurationSource() {
+                    @Override
+                    public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
+                        CorsConfiguration config = new CorsConfiguration();
+                        config.setAllowedOrigins(List.of(
+                                "https://api.daengdaeng-where.link",
+                                "https://localhost:5173"
+                        ));
+                        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")); // 정확한 메서드 명시
+                        config.setAllowedHeaders(List.of("*")); // 모든 헤더 허용
+                        config.setAllowCredentials(true); // 쿠키 허용
+                        config.setMaxAge(3600L); // 캐시 시간 (1시간)
+                        return config;
+                    }
+                }));
         http
-           .addFilterBefore(new JWTFilter(jwtUtil,redisTokenRepository,userService), UsernamePasswordAuthenticationFilter.class);
+            .authorizeHttpRequests((auth) -> auth
+                .requestMatchers("/api/v1/**","/api/v1/loginSuccess","https://api.daengdaeng-where.link/login", "/static/**",
+                    "/favicon.ico","/css/**", "/js/**", "/images/**","signupPage.html").permitAll()
+                .anyRequest().authenticated()).addFilterBefore(new JWTFilter(jwtUtil,redisTokenRepository,userService), UsernamePasswordAuthenticationFilter.class);
 
         http
                 .oauth2Login((oauth2) -> oauth2
@@ -73,12 +85,12 @@ public class SecurityConfig {
 
 
         http
-                .authorizeHttpRequests((auth) -> auth
-                        .requestMatchers("/","/login", "/api/v1/signup", "/static/**", "/css/**", "/js/**", "/images/**","signupPage.html").permitAll()
-                        .anyRequest().authenticated())
                 .formLogin((formLogin) -> formLogin
-                        .loginPage("/login")
-                        .permitAll());
+                        .loginPage("https://api.daengdaeng-where.link/login")
+                        .permitAll())
+                .exceptionHandling(exception -> exception
+                                .authenticationEntryPoint(new CustomAuthenticationEntryPoint()));
+
 
         http
                 .sessionManagement((session) -> session
@@ -86,4 +98,5 @@ public class SecurityConfig {
 
         return http.build();
     }
+
 }
